<resources>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="besome_blog_url">http://medium.com/sketchware</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="collection_duplicated_name">Duplicate file name in my collection</string>
    <string name="collection_failed_to_copy">Failed to save to my collection</string>
    <string name="collection_no_exist_file">File does not exist</string>
    <string name="color_editor_delete_color">Delete color</string>
    <string name="common_error_activity_not_found">Activity not found</string>
    <string name="common_error_an_error_occurred">An error occurred!</string>
    <string name="common_error_failed_to_connect_server">Failed to connect to the server</string>
    <string name="common_error_failed_to_save">Failed to save</string>
    <string name="common_error_unknown">Unknown error! Please contact the administrator</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_message_no_item_delete">There are no items to delete</string>
    <string name="common_message_check_network">Please check your internet connection</string>
    <string name="common_message_complete_delete">Delete complete</string>
    <string name="common_message_complete_reset">Reset complete</string>
    <string name="common_message_complete_save">Save complete</string>
    <string name="common_message_confirm">Are you sure?</string>
    <string name="common_message_insufficient_storage_space">"There is not enough space available in the storage.
Please make room and try again"</string>
    <string name="common_message_insufficient_storage_space_title">Insufficient storage space</string>
    <string name="common_message_loading">Now Loading</string>
    <string name="common_message_name_unavailable">Current name is unavailable</string>
    <string name="common_message_permission_denied">Permission denied</string>
    <string name="common_message_permission_need_load_project">We need your permission to Storage to save and load projects</string>
    <string name="common_message_permission_storage">To access photos, media, and files, please give Sketchware permission in the next step</string>
    <string name="common_message_permission_storage1">"Permission Denied.
Please click on Settings to allow permission for Storage. Without this permission, some features may not function properly"</string>
    <string name="common_message_permission_title_storage">Permission Required</string>
    <string name="common_message_progress">Progressing</string>
    <string name="common_message_selected_file_empty">Selected file is empty</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="component_add_docs_button_title_go_to_docs">Read Documentation</string>
    <string name="component_add_message_docs_updated_soon">The docs page will be updated soon</string>
    <string name="component_context_menu_title">Component menu</string>
    <string name="component_context_menu_title_delete_component">Delete Component</string>
    <string name="component_description_bluetooth_connect">Bluetooth Connect is used to connect to another device via Bluetooth.</string>
    <string name="component_description_calendar">Calendar is used to calculate time and date</string>
    <string name="component_description_camera">Camera is used to take a picture.</string>
    <string name="component_description_dialog">Dialog is used to create a pop-up</string>
    <string name="component_description_file">File is used to save data locally</string>
    <string name="component_description_file_picker">FilePicker is used to select raw and media files, such as images, sounds, and text.</string>
    <string name="component_description_file_picker_guide_mime_type_example">"MIME type is used to identify a type of data.
ex)\"*/*\", \"image/*\", \"audio/*\", \"text/*\""</string>
    <string name="component_description_firebase_auth">Firebase Auth allows online user authentication</string>
    <string name="component_description_firebase_storage">Firebase Storage is built for app developers who need to store and serve user-generated content.</string>
    <string name="component_description_gyrosope">"The gyroscope measures the rate of rotation in rad/s around a device's x, y, and z axis."</string>
    <string name="component_description_intent">Intent is used to start a new Activity</string>
    <string name="component_description_interstitial_ad">Interstitial Ad lets you add fullscreen advertisements.</string>
    <string name="component_description_location_manager">LocationManager is used to load a data of the current location</string>
    <string name="component_description_mediaplayer">MediaPlayer is used to play big sound files</string>
    <string name="component_description_objectanimator">ObjectAnimator is used to animate certain properties of a View</string>
    <string name="component_description_request_network">RequestNetwork is used to make Web API calls</string>
    <string name="component_description_soundpool">SoundPool is used to play short sound effects</string>
    <string name="component_description_speech_to_text">SpeechToText is used to convert speech to text</string>
    <string name="component_description_text_to_speech">TextToSpeech is used to convert text to speech</string>
    <string name="component_description_timer">Timer is used to delay certain actions</string>
    <string name="component_description_vibrator">Vibrator is used vibrate the device</string>
    <string name="component_file_hint_enter_file_name">Enter file name</string>
    <string name="component_file_picker_hint_mime_type">Enter mime type</string>
    <string name="component_file_picker_title_select_mime_type">Select Mime Type</string>
    <string name="component_file_picker_title_select_mime_type_all_files">All files</string>
    <string name="component_file_picker_title_select_mime_type_audio_files">Audio files</string>
    <string name="component_file_picker_title_select_mime_type_image_files">Image files</string>
    <string name="component_file_picker_title_select_mime_type_text_files">Text files</string>
    <string name="component_file_title_file_name">File name</string>
    <string name="component_hint_enter_name">Enter Component name</string>
    <string name="component_message_component_block_added">New blocks have been added in the Logic Editor</string>
    <string name="component_message_no_components">No components to display</string>
    <string name="component_title_add_component">Add component</string>
    <string name="design_actionbar_title_library">Library Manager</string>
    <string name="design_actionbar_title_manager_collection">Collection Manager</string>
    <string name="design_actionbar_title_manager_font">Font Manager</string>
    <string name="design_actionbar_title_manager_image">Image Manager</string>
    <string name="design_actionbar_title_manager_sound">Sound Manager</string>
    <string name="design_actionbar_title_manager_view">View Manager</string>
    <string name="design_actionbar_title_manager_resources">Resources Editor</string>
    <string name="resource_manager_no_list_title">No %s here</string>
    <string name="resource_manager_no_list_body">You don\'t have any %s here yet, try creating one.</string>
    <string name="design_actionbar_title_show_source_code">Show built-in source code</string>
    <string name="design_button_properties">Properties</string>
    <string name="design_drawer_menu_bottom_title">Global</string>
    <string name="design_drawer_menu_description_collection">My saved collections</string>
    <string name="design_drawer_menu_description_font">Import different fonts</string>
    <string name="design_drawer_menu_description_image">Import photos and icons</string>
    <string name="design_drawer_menu_description_library">Component settings</string>
    <string name="design_drawer_menu_description_sound">Import music and sound effects</string>
    <string name="design_drawer_menu_description_source_code">View built-in Java and XML files</string>
    <string name="design_drawer_menu_description_theme">Color theme</string>
    <string name="design_drawer_menu_description_view">Manage multiple screens</string>
    <string name="design_drawer_menu_description_xml_command">Modify built-in XML files</string>
    <string name="design_drawer_menu_title">Configuration</string>
    <string name="design_drawer_menu_title_collection">Collection Manager</string>
    <string name="design_drawer_menu_title_font">Font Manager</string>
    <string name="design_drawer_menu_title_image">Image Manager</string>
    <string name="design_drawer_menu_title_library">Library Manager</string>
    <string name="project_search_title">Search in project</string>
    <string name="project_search_hint">Search for text</string>
    <string name="project_search_match_case">Match case</string>
    <string name="project_search_whole_word">Whole word</string>
    <string name="project_search_regex">Regex</string>
    <string name="snapshots_title">Snapshots</string>
    <string name="snapshots_hint">A snapshot is a copy of the project. The project is saved when you open this screen, so it includes your latest changes.</string>
    <string name="snapshots_empty">No snapshots yet. They are taken when you save and before each build, or tap the button below.</string>
    <string name="snapshots_create">Take snapshot</string>
    <string name="code_shrinker_use_r8">Use R8</string>
    <string name="code_shrinker_configure_shrinker">Configure R8/ProGuard by editing the rules file. This step is necessary because without a proper configuration, ProGuard might break your project.</string>
    <string name="code_shrinker_full_mode_def">Using this, you can configure specific local libs to be included in R8/ProGuarding process. (Note: Enabling this will ignore DEX files of the local libs you select and it will force Sketchware to compile them to dex, making compilation noticeably slower.)</string>
    <string name="code_shrinker_intro">Make your app smaller and harder to copy. Pick a level: NWS takes care of the technical rules for you.</string>
    <string name="code_shrinker_mode_off">Off</string>
    <string name="code_shrinker_mode_off_desc">Nothing is changed. Fastest builds, best while you are still building your app.</string>
    <string name="code_shrinker_mode_safe">Smaller</string>
    <string name="code_shrinker_mode_safe_desc">Removes code your app never uses. Names stay the same, so almost nothing can break.</string>
    <string name="code_shrinker_mode_max">Smaller and protected</string>
    <string name="code_shrinker_mode_max_desc">Also scrambles names, so the app is hard to read once decompiled. Smallest result, but test every screen: a library may need an extra rule.</string>
    <string name="code_shrinker_recommended">Recommended</string>
    <string name="code_shrinker_advanced">Advanced options</string>
    <string name="code_shrinker_advanced_sub">For experienced users: engine, rules, libraries, crash map</string>
    <string name="code_shrinker_r8_desc">Recommended: faster and better maintained than ProGuard.</string>
    <string name="code_shrinker_rules_title">Edit shrinker rules</string>
    <string name="code_shrinker_full_mode_title">Include local libraries</string>
    <string name="code_shrinker_debug_title">Keep a map to read crash reports</string>
    <string name="code_shrinker_debug_desc">Saves mapping.txt with the build, to find the real names behind a crash of a scrambled app.</string>
</resources>